Fix menu on ie11

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -8,6 +8,7 @@
   -o-transition: $args
   transition: $args
 
+
 // Config vars
 // Kaldi logo brand color: #FD461E
 $kaldi-red: #D64000
@@ -391,7 +392,7 @@ $navbar-item-color: white
             width: 1em
             margin-left: -1em
             line-height: 0
-            
+
   &.description
     width: 100%
 
@@ -849,6 +850,11 @@ $navbar-item-color: white
 .input, .textarea
   border-color: #4d7ea8
   
+@include desktop 
+    .navbar-item 
+        &.is-hoverable:hover 
+            .navbar-dropdown 
+                display: block
 
 
 // responsiveness
